--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -7,9 +7,9 @@
     <!--TODO work with this imageView-->
 
     <ImageView
-        android:id="@+id/imageView_book_thumbnail"
-        android:layout_width="48dp"
-        android:layout_height="72dp"
+        android:id="@+id/ImageView_book_thumbnail"
+        android:layout_width="64dp"
+        android:layout_height="88dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
@@ -20,8 +20,8 @@
         android:id="@+id/TextView_book_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imageView_book_thumbnail"
-        android:layout_toEndOf="@id/imageView_book_thumbnail"
+        android:layout_toRightOf="@id/ImageView_book_thumbnail"
+        android:layout_toEndOf="@id/ImageView_book_thumbnail"
         android:layout_alignParentTop="true"
         android:paddingLeft="8dp"
         android:paddingStart="8dp"
@@ -38,8 +38,8 @@
         android:id="@+id/TextView_book_authors"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imageView_book_thumbnail"
-        android:layout_toEndOf="@id/imageView_book_thumbnail"
+        android:layout_toRightOf="@id/ImageView_book_thumbnail"
+        android:layout_toEndOf="@id/ImageView_book_thumbnail"
         android:layout_below="@id/TextView_book_title"
         android:paddingLeft="8dp"
         android:paddingStart="8dp"
@@ -58,8 +58,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/TextView_book_authors"
-        android:layout_toRightOf="@id/imageView_book_thumbnail"
-        android:layout_toEndOf="@id/imageView_book_thumbnail"
+        android:layout_toRightOf="@id/ImageView_book_thumbnail"
+        android:layout_toEndOf="@id/ImageView_book_thumbnail"
         android:paddingLeft="8dp"
         android:paddingStart="8dp"
         android:paddingRight="8dp"
@@ -73,8 +73,11 @@
             android:id="@+id/TextView_ebook_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="4dp"
+            android:paddingEnd="4dp"
             android:text="E-Book"
-            android:textSize="12sp"/>
+            android:textSize="12sp"
+            />
 
         <TextView
             android:id="@+id/TextView_rating_number"
@@ -82,12 +85,11 @@
             android:layout_height="wrap_content"
             android:text="4.9"
             android:textSize="12sp"
-            android:paddingLeft="4dp"
-            android:paddingStart="4dp"
             android:paddingRight="2dp"
             android:paddingEnd="2dp"/>
 
         <ImageView
+            android:id="@+id/ImageView_rating_star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/layout_rating_star"
@@ -104,8 +106,8 @@
         android:id="@+id/TextView_book_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imageView_book_thumbnail"
-        android:layout_toEndOf="@id/imageView_book_thumbnail"
+        android:layout_toRightOf="@id/ImageView_book_thumbnail"
+        android:layout_toEndOf="@id/ImageView_book_thumbnail"
         android:layout_below="@id/LinearLayout_ebook_rating"
         android:paddingLeft="8dp"
         android:paddingStart="8dp"
