--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -115,6 +115,12 @@
         android:maxLines="1"
         android:textSize="12sp"/>
 
+    <TextView
+        android:id="@+id/TextView_list_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
 
 
 
