--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,9 +10,6 @@
         layout="@layout/toolbar_search"/>
     <!--listView-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <ListView
         android:id="@+id/listView_search_results"
@@ -20,5 +17,18 @@
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar_fragment_search"
         tools:listitem="test"/>
+
+    <TextView
+        android:id="@+id/TextView_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+    
+    <ProgressBar
+        android:id="@+id/ProgressBar_loading_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
