--- a/app/src/main/res/layout/fragment_search_recycler.xml
+++ b/app/src/main/res/layout/fragment_search_recycler.xml
@@ -10,14 +10,6 @@
         layout="@layout/toolbar_search"/>
     <!--listView-->
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerView_search_results"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_fragment_search"
-        tools:listitem="test"/>
-
     <TextView
         android:id="@+id/TextView_empty"
         android:layout_width="wrap_content"
@@ -30,5 +22,22 @@
         android:layout_height="wrap_content"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_centerInParent="true"/>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/SwipeRefreshLayout_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_fragment_search">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerView_search_results"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="test"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
 
 </RelativeLayout>
