--- a/app/src/main/res/layout/toolbar_search.xml
+++ b/app/src/main/res/layout/toolbar_search.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/imageView_random"
             android:textSize="24sp"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            tools:text="Fragment"/>
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView_toolbar_search"
@@ -57,7 +58,30 @@
             android:layout_centerVertical="true"
             android:src="@drawable/ic_toolbar_search_activate" />-->
 
+        <ImageView
+            android:id="@+id/imageView_microphone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_navigation_books_24dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toLeftOf="@id/imageView_settings"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:id="@+id/imageView_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_navigation_home_24dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_centerVertical="true"/>
+
     </RelativeLayout>
+
+
 
 
 
